# https-notif-c-collector

./: .gitignore  INSTALL.md  LICENSE  Makefile  Makefile.am  README.md  configure.ac  install.sh  meson.build  remove_autotools.sh  uninstall.sh  unyte-https-notif.pc.in  unyte-pkg.pc
deprecated/: 2_Makefile  uninstall.sh  unyte-pkg.pc
examples/: Makefile.am  client_continuous.c  client_sample.c  client_socket.c
examples/eBPF/: Makefile.am  client_ebpf_user.c
src/: Makefile.am  unyte_https_capabilities.c  unyte_https_capabilities.h  unyte_https_collector.c  unyte_https_collector.h  unyte_https_defaults.h  unyte_https_queue.c  unyte_https_queue.h  unyte_https_reuseport_user.c  unyte_https_reuseport_user.h  unyte_https_utils.c  unyte_https_utils.h  unyte_https_version.h  unyte_reuseport_user.c  unyte_server_daemon.c  unyte_server_daemon.h
